# denarborea

./: .gitignore  Cargo.toml  Makefile  README.md  README.md.backup  analyze_benchmarks.py  codecov.yml  test_extreme_files.sh
.github/workflows/: ci.yml
benches/: large_file_benchmark.rs
docs/: README.md  advanced-examples.md  basic-usage.md  display-options.md  examples.md  file-viewer.md  filtering.md  git-integration.md  output-formats.md  sorting.md
docs/example_files/: README.txt  docker-compose.yml  employees.parquet
examples/: Cargo.toml  config.json  data.csv
src/: config.rs  display.rs  git.rs  lib.rs  main.rs  stats.rs  tree.rs  utils.rs
src/viewer/: binary.rs  csv_viewer.rs  large_file.rs  mod.rs  parquet_viewer.rs  structured.rs  text.rs
tests/: e2e_tests.rs  large_file_tests.rs  unit_tests.rs
tests/common/: test_helpers.rs
tests/e2e/: cli_tests.rs  viewer_cli_tests.rs  viewer_edge_cases.rs
tests/unit/: config_tests.rs  display_tests.rs  utils_tests.rs  viewer_tests.rs
