[package]
name = "tree-visualizer"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.0.0", features = ["derive"] }
colored = "3.0.0"
walkdir = "2.3"
humansize = "2.1"
serde = { version = "1.0", features = ["derive"] }
toml = "0.9.5"
dirs = "6.0.0"
regex = "1.1.0"
chrono = { version = "0.4", features = ["serde"] }
md5 = "0.8"
ignore = "0.4"
git2 = { version = "0.20.2", optional = true }
crossterm = "0.29.0"

[features]
default = ["git"]
git = ["git2"]

[dev-dependencies]
tempfile = "3.0"