[package]
name = "denarborea"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.0.0", features = ["derive"] }
colored = "3.0.0"
walkdir = "2.3"
humansize = "2.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
toml = "0.9.5"
dirs = "6.0.0"
regex = "1.1.0"
chrono = { version = "0.4", features = ["serde"] }
md5 = "0.8"
ignore = "0.4"
git2 = { version = "0.20.2", optional = true }
crossterm = "0.29.0"
csv = "1.3"
syntect = "5.1"
parquet = "53.0"
arrow = "53.0"
arrow-array = "53.0"
memmap2 = "0.9"

[features]
default = ["git"]
git = ["git2"]

[dev-dependencies]
tempfile = "3.0"
assert_cmd = "2.0"
predicates = "3.0"
proptest = "1.0"
criterion = { version = "0.5", features = ["html_reports"] }
mockall = "0.11"

[[bench]]
name = "large_file_benchmark"
harness = false